crates/velme-cli/tests/snapshots/run__ac_rdm_06_a_broken_fixture_shows_the_failed_check_with_its_values.snap
---
source: crates/velme-cli/tests/run.rs
expression: run.stderr
---
Error: `Add` didn't pass its check: `result == a + b`.  [VL0501]
   ╭─[ add.velme:7:11 ]
   │
 7 │         - result == a + b
   │           ───────┬───────  
   │                  ╰───────── here
   │ 
   │ Note 1: Expected: 5
   │ 
   │ Note 2: Received: 6
   │ 
   │ Note 3: `result` = 6
   │ 
   │ Note 4: `a` = 2
   │ 
   │ Note 5: `b` = 3
───╯
