crates/velme-cli/tests/snapshots/run__run_demo_find_badge.snap
---
source: crates/velme-cli/tests/run.rs
expression: run.stdout
---
{
  "format": "velme-cli/1",
  "status": "ok",
  "results": [
    {
      "goal": "FindBadge",
      "status": "ok",
      "diagnostics": [],
      "result": "Silver"
    }
  ],
  "diagnostics": [],
  "notices": []
}
