crates/velme-cli/tests/snapshots/run__run_demo_player_summary.snap
---
source: crates/velme-cli/tests/run.rs
expression: run.stdout
---
{
  "format": "velme-cli/1",
  "status": "ok",
  "results": [
    {
      "goal": "BuildPlayerSummary",
      "status": "ok",
      "diagnostics": [],
      "result": {
        "name": "Lina",
        "score": 820,
        "badge": "Silver"
      },
      "calls": [
        {
          "binding": "score",
          "goal": "CalculateScore",
          "status": "ok"
        },
        {
          "binding": "badge",
          "goal": "FindBadge",
          "status": "ok"
        }
      ]
    }
  ],
  "diagnostics": [],
  "notices": []
}
