crates/velme-cli/tests/snapshots/run__run_shows_the_result.snap
---
source: crates/velme-cli/tests/run.rs
expression: run.stdout
---
{
  "format": "velme-cli/1",
  "status": "ok",
  "results": [
    {
      "goal": "Add",
      "status": "ok",
      "diagnostics": [],
      "result": 2.25
    }
  ],
  "diagnostics": [],
  "notices": []
}
